@@ -309,16 +309,6 @@ foreach (values %nnrpd_timer_names) {
 }
 $nnrpd_time_times = 0;        # ...
 
-my %notice_state;
-my %notice_state_ever_closed;
-my %innd_cp_accepted;
-my %innd_cp_refused;
-my %innd_cp_rejected;
-my %innd_cp_seconds;
-my %innd_cp_stored_size;
-my %innd_cp_duplicated_size;
-my %innd_cp_rejected_size;
-
 # collect: Used to collect the data.
 sub collect($$$$$$) {
   my ($day, $hour, $prog, $res, $left, $CASE_SENSITIVE) = @_;
@@ -591,63 +581,24 @@ sub collect($$$$$$) {
 
     # closed/checkpoint (with times)
     #
-    # For checkpoints, store the current checkpoint numbers; if we still have
-    # checkpoint numbers left over at the end of the run, we'll add them to
-    # our totals.  On a closed, clear any checkpoint numbers and add the close
-    # numbers to the totals.  Basically, we want to ignore checkpoints unless
-    # we don't get a close before the end of the log.
+    # Add all checkpoints.  They contain stats generated since the last
+    # checkpoint.
+    # On a closed, a checkpoint is generated by innd.  It is therefore
+    # useless to take into account a line corresponding to a closed status.
     if ($left =~ /(\S+:\d+) (checkpoint|closed) seconds (\d+) accepted (\d+) refused (\d+) rejected (\d+) duplicate (\d+) accepted size (\d+) duplicate size (\d+)(?: rejected size (\d+))?$/o) {
       my ($server, $status, $seconds, $accepted, $refused, $rejected, $duplicate, $accptsize, $dupsize, $rjctsize) =
 	($1, $2, $3, $4, $5, $6, $7, $8, $9, $10);
       $server = lc $server unless $CASE_SENSITIVE;
-      $notice_state{$server} = $status;
 
       if ($status eq 'checkpoint') {
-        $innd_cp_accepted{$server}        = $accepted;
-        $innd_cp_refused{$server}         = $refused;
-        $innd_cp_rejected{$server}        = $rejected;
-        $innd_cp_seconds{$server}         = $seconds;
-        $innd_cp_stored_size{$server}     = $accptsize;
-        $innd_cp_duplicated_size{$server} = $dupsize;
-        $innd_cp_rejected_size{$server}   = ($rjctsize || 0);
-      } elsif ($status eq "closed") {
-        $innd_cp_accepted{$server}        = 0;
-        $innd_cp_refused{$server}         = 0;
-        $innd_cp_rejected{$server}        = 0;
-        $innd_cp_seconds{$server}         = 0;
-        $innd_cp_stored_size{$server}     = 0;
-        $innd_cp_duplicated_size{$server} = 0;
-        $innd_cp_rejected_size{$server}   = 0;
-
-        $notice_state_ever_closed{$server} = "YES";
-
-        $innd_seconds{$server} += $seconds;
-        $innd_accepted{$server} += $accepted;
-        $innd_refused{$server} += $refused;
-        $innd_rejected{$server} += $rejected;
-        $innd_stored_size{$server} += $accptsize;
+        $innd_seconds{$server}         += $seconds;
+        $innd_accepted{$server}        += $accepted;
+        $innd_refused{$server}         += $refused;
+        $innd_rejected{$server}        += $rejected;
+        $innd_stored_size{$server}     += $accptsize;
         $innd_duplicated_size{$server} += $dupsize;
-        $innd_rejected_size{$server} += ($rjctsize || 0);
+        $innd_rejected_size{$server}   += ($rjctsize || 0);
       }
-      return 1;
-    # closed (with times)
-    } elsif ($left =~ /(\S+:\d+) closed seconds (\d+) accepted (\d+) refused (\d+) rejected (\d+)$/o) {
-      my ($server, $seconds, $accepted, $refused, $rejected) =
-	($1, $2, $3, $4, $5);
-      $server = lc $server unless $CASE_SENSITIVE;
-
-      $innd_cp_accepted{$server}        = 0;
-      $innd_cp_refused{$server}         = 0;
-      $innd_cp_rejected{$server}        = 0;
-      $innd_cp_seconds{$server}         = 0;
-      $innd_cp_stored_size{$server}     = 0;
-      $innd_cp_duplicated_size{$server} = 0;
-      $innd_cp_rejected_size{$server}   = 0;
-
-      $innd_seconds{$server} += $seconds;
-      $innd_accepted{$server} += $accepted;
-      $innd_refused{$server} += $refused;
-      $innd_rejected{$server} += $rejected;
       return 1;
     }
     # closed (without times (?))
@@ -2155,26 +2106,14 @@ sub adjust($$) {
   {
     my ($key, $hostname, $channel);
 
-    # If there are any checkpoint counts left over at the end of the file,
-    # transfer them to the totals for that server.
-    #
-    # Also, since the checkpoint counts include entries for all server
+    # Since the checkpoint counts include entries for all server
     # connections, check to see if any checkpoint server entries are not also
     # in %innd_connect.  Add any missing servers (persistant servers with no
     # connected log lines) to %innd_connect so that incoming totals will be
     # properly computed.
-    foreach $server (keys (%innd_cp_accepted)) {
+    foreach $server (keys (%innd_accepted)) {
       if (! defined($innd_connect{$server})) {
         $innd_connect{$server} = 0;
-      }
-      if ($notice_state{$server} eq "checkpoint") {
-        $innd_accepted{$server}        += $innd_cp_accepted{$server};
-        $innd_refused{$server}         += $innd_cp_refused{$server};
-        $innd_rejected{$server}        += $innd_cp_rejected{$server};
-        $innd_seconds{$server}         += $innd_cp_seconds{$server};
-        $innd_stored_size{$server}     += $innd_cp_stored_size{$server};
-        $innd_duplicated_size{$server} += $innd_cp_duplicated_size{$server};
-        $innd_rejected_size{$server}   += ($innd_cp_rejected_size{$server} || 0);
       }
     }
 
